@@ -10,10 +10,9 @@ DIST gitlab-gitaly-0.6.0.tar.bz2 687192 SHA256 ead87c0da129c075011a55e5b2138febf
 EBUILD gitlab-gitaly-0.10.0.ebuild 776 SHA256 08e08d43d9ec359f418d13cdfbd7c2560c236f8102cb2cc16739569ad112ac1e SHA512 7be112d99f8dc1353af718bc7551fb5c9e616179ce494853b60f77a099850abc689f25b0587db056ef1dd90dfa90b77cba72d6afb8e663841e0162667d4b7628 WHIRLPOOL ec245d5028174a264730997fa66907a187a7ef58ed4cecfb287bead932b8cbd2f2073311f0b8f5f8c5381e11a4c811dd5738e8bd0d357183f0fb3706e909899d
 EBUILD gitlab-gitaly-0.11.2-r1.ebuild 925 SHA256 5a12499e0abada1e9351fcc25cf2dc882f577d9a0cdcd63a7f1819001664faeb SHA512 9752b120d754e95d96a432315171503329c9562448aad498d3aac091be12fcfbf2c617d74430f6578dbcea613981608d8369acc388f0238a4d29ab7c978c2a28 WHIRLPOOL af91a99bd879fac0fe1c29e5d9fb7a93ca8939bfb0bbf51ea9ddd43dd46867e8e918d1598176d3c85b53e6b9b27d07ff325d5856a3106e2402071870e886c059
 EBUILD gitlab-gitaly-0.21.2.ebuild 925 SHA256 5a12499e0abada1e9351fcc25cf2dc882f577d9a0cdcd63a7f1819001664faeb SHA512 9752b120d754e95d96a432315171503329c9562448aad498d3aac091be12fcfbf2c617d74430f6578dbcea613981608d8369acc388f0238a4d29ab7c978c2a28 WHIRLPOOL af91a99bd879fac0fe1c29e5d9fb7a93ca8939bfb0bbf51ea9ddd43dd46867e8e918d1598176d3c85b53e6b9b27d07ff325d5856a3106e2402071870e886c059
-EBUILD gitlab-gitaly-0.23.0.ebuild 925 SHA256 7294cc955fc5eedf9bcadfef76572dc1d972165e67de09273bc4159b699e4e4c SHA512 d624de4a9f2f63625669df32ffc0a16e63c356d7f3b0da6be68fe2f0f3c58399ccd8f1c0d1897c1e20fd7e67508133381f4f9e099bd8b929e64042131816e228 WHIRLPOOL f0e4093efa0372249bdc54ee8f4cdb4318f0fd85296964c2412f5b4ca0933677566733b68f64e53b68480d3246126e2e030fac99e962d510a1010907b2d5dac9
 EBUILD gitlab-gitaly-0.3.0.ebuild 776 SHA256 8d916fec7805c40859db18bc558abb8fd87e6d447583a4fec721c2dbe0befd58 SHA512 eb5f0863b236603d39b6afcca772f86a7153f91bacbb49041ffc5efd5f22f0c028966da054ba92e0a30838e09fcf52fcabff40ef8138945c1b585ed234643e52 WHIRLPOOL 265da4265e6e0a3cc7ba2f22a796c6aef639f463e9558223a0eca578bcfe325c97feb42ca697066b7ec88161fa1e64b0dde19a0c17a4b2ed3c6462a863f82ecd
 EBUILD gitlab-gitaly-0.35.0-r1.ebuild 1108 SHA256 c041a2e7f8f29485a0a9ec56615fbcd75e5b0a7ca0afcff1ffad0b095efc0101 SHA512 868f9fb01ce5b78bd906e2ae8fa0093ae41931856bce25602c3cc2d109779afb7e643e0032d650bfa03a2424f8edb89dbcc680e7daa5a93d69545cd0c8c69263 WHIRLPOOL 2584b50d63e3aed372062b97d4c5093f520940fed0ade166c71d03ec7a50b6679da9544d9bcb7c6ba720f07de9ec54e6dca1f0bc3baf705828e41c642d4aa14a
 EBUILD gitlab-gitaly-0.38.0.ebuild 1000 SHA256 af0a1d26cf628049f2ba52f7ab87d7cde5fbe0d10f25da9b30df26b774e27de0 SHA512 09a4168891cb419f8486fb0680a381eb1ea7008dff7332ae2f884890b8960b2a3e19ba2eb704105da2fc7c90d139f53f7b0b8d34ea4eff83e55e6d10a1e564af WHIRLPOOL 25e32ca020fa6024cbf9608aab22f313687c0d58979316899bb58a2fd5d67245c79e0d6990585c4295fc9b3bd2b37ba5e1db91166ad14aff74ae43788b79e3a3
 EBUILD gitlab-gitaly-0.6.0.ebuild 776 SHA256 08e08d43d9ec359f418d13cdfbd7c2560c236f8102cb2cc16739569ad112ac1e SHA512 7be112d99f8dc1353af718bc7551fb5c9e616179ce494853b60f77a099850abc689f25b0587db056ef1dd90dfa90b77cba72d6afb8e663841e0162667d4b7628 WHIRLPOOL ec245d5028174a264730997fa66907a187a7ef58ed4cecfb287bead932b8cbd2f2073311f0b8f5f8c5381e11a4c811dd5738e8bd0d357183f0fb3706e909899d
-MISC ChangeLog 3353 SHA256 7581795d99067ceaee4924ba03290a60dcd74ffe3efe0d242b09bf6ec709c6e4 SHA512 a50c1513123122478ebbe0e431f708732f808d2ccee5cae8e6256ae4a77d56c46373a09f7c859d91ac87cf0d8bbb604b8d3692e45c3cdf58f3cc25e4c8fac429 WHIRLPOOL 1313a52373afc8108ae99e84a2d4fcf93d304b15dc6027a641a73dd0c9a5901f82250c05344e76dfef4e378e77287c262de1969947eea41a48053a0188371d24
+MISC ChangeLog 3489 SHA256 387f25ad9f4cd60b0dde48c4bbe70a9167dd1b8795919526c48d894fa8c7e20a SHA512 350daf35730580dedbb17ded2bde4ad3dda136630114c52f104199cda7b1bbc685f183f017039f8479c4bc11d363bad3d484bf32a96cced76283e86987dd5197 WHIRLPOOL f70ce79d4542ac4724f64d817845d4915664dd14af10b04835814c65079bed4d2ff6822aa9799ce117551588c5b64e803cb95c6e26c50fc0e07bf125ae7e9aea
 MISC metadata.xml 248 SHA256 7b43be15755627edf5c12cf1b50c607d781558640bf8375d685d51d7ade99a32 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2 WHIRLPOOL 993013c9878ead35469db13d3072f694a341ee654182e0c31d0678f5dd6de4bdc8d59a0b7bb6d685dc41ea6b55dac518cd8034131baea8002170c680e50304d1
